--- a/index.html
+++ b/index.html
@@ -23,17 +23,26 @@
         width: 100%;
       }
 
+      .map-overlay {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        background: #fff;
+        margin-right: 40px;
+        margin-bottom: 40px;
+        overflow: auto;
+        border-radius: 3px;
+      }
+
       #legend {
         padding: 10px;
         box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-        line-height: 1.2em;
-        margin-top: 20px;
-        margin-bottom: 40px;
+        height: 150px;
         width: 100px;
       }
-
       .legend-key {
         display: inline-block;
+        line-height: 1em;
         border-radius: 20%;
         width: 10px;
         height: 10px;
@@ -53,12 +62,18 @@
       const map = new mapboxgl.Map({
         container: 'map', // container ID
         style: 'mapbox://styles/duddk/cl6lfmrfa000614n1liu6fg5g/draft',
-        center: [-100, 38], // starting position [lng, lat]
-        zoom: 4, // starting zoom
       });
 
       //create popup, category
       map.on('load', () => {
+        map.getCanvas().style.cursor = 'pointer';
+
+        // set map bounds to the continental US
+        map.fitBounds([
+          [-133.2421875, 16.972741],
+          [-47.63671875, 52.696361],
+        ]);
+
         //legend(category)
         const layers = [
           '0-10',
@@ -74,9 +89,9 @@
           '#7793ee',
           '#5c7deb',
           '#3861e5',
-          '1242de',
-          '0d2e9c',
-          '011c74',
+          '#1242de',
+          '#0d2e9c',
+          '#011c74',
         ];
 
         const legend = document.getElementById('legend');
