--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
         });
 
         //hover
+        let hoveredStateId = null;
+
         map.addSource('states', {
           type: 'geojson',
           data: 'https://docs.mapbox.com/mapbox-gl-js/assets/us_states.geojson',
