--- a/index.html
+++ b/index.html
@@ -154,6 +154,14 @@
               { hover: true }
             );
           }
+
+          //change info window on hover
+          const feature = map.queryRenderedFeatures(e.point, {
+            layers: ['choropleth-labels'],
+          });
+          document.getElementById('pd').innerHTML = feature.length
+            ? `<h3>${feature[0].properties.name}</h3><p><strong>${feature[0].properties.density}</strong> people per square mile</p>`
+            : `<p>no data</p>`;
         });
 
         // When the mouse leaves the state-fill layer, update the feature state of the
