--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         height: 150px;
         width: 100px;
       }
+
       .legend-key {
         display: inline-block;
         line-height: 1em;
@@ -48,11 +49,27 @@
         height: 10px;
         margin-right: 5px;
       }
+
+      #features {
+        text-align: center;
+        margin-top: 20px;
+        top: 0;
+        height: 150px;
+        width: 300px;
+      }
+
+      #features p {
+        padding-top: 12px;
+      }
     </style>
   </head>
   <body>
     <div id="map"></div>
     <div class="map-overlay" id="legend"></div>
+    <div class="map-overlay" id="features">
+      <h2>US population density</h2>
+      <div id="pd"></div>
+    </div>
 
     <script>
       mapboxgl.accessToken =
@@ -113,8 +130,6 @@
         });
 
         //hover
-        let hoveredStateId = null;
-
         map.addSource('states', {
           type: 'geojson',
           data: 'https://docs.mapbox.com/mapbox-gl-js/assets/us_states.geojson',
